Services/BoardAuth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boardauth
  labels:
    app: boardauth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boardauth
  template:
    metadata:
      labels:
        app: boardauth
    spec:
      containers:
      - name: boardauth
        image: lexicon420/board-auth 
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
---
apiVersion: v1
kind: Service
metadata:
  name: boardauth-service
spec:
  selector:
    app: boardauth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
