Services/BoardDB.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
    name: boarddb
spec:  
    replicas: 1
    selector:    
        matchLabels:      
          app: boarddb 
    template:    
        metadata:      
          labels:        
            app: boarddb    
        spec:      
          containers:      
          - name: boarddb        
            image: lexicon420/boarddb        
            imagePullPolicy: IfNotPresent        
            resources:          
              limits:            
                memory: "64Mi"            
                cpu: "128m"        
            ports:        
            - containerPort: 7248          
              name: http 
---
apiVersion: v1
kind: Service
metadata:  
   name: boarddb
spec:  
   selector:    
      app: boarddb 
   ports:  
   - port: 80
