Services/BoardSettings.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
    name: boardsettings
spec:  
    replicas: 1
    selector:    
        matchLabels:      
          app: boardsettings 
    template:    
        metadata:      
          labels:        
            app: boardsettings    
        spec:      
          containers:      
          - name: boardsettings        
            image: lexicon420/board-settings:loadtest        
            imagePullPolicy: Always        
            resources:          
              limits:            
                memory: "1024Mi"            
                cpu: "2"        
            ports:        
            - containerPort: 7248          
              name: http 
---
apiVersion: v1
kind: Service
metadata:  
   name: boardsettings
spec:  
   selector:    
      app: boardsettings
   ports:  
   - port: 80
